--- a/packages.config
+++ b/packages.config
@@ -1,19 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net472" />
+  <package id="CommunityToolkit.Mvvm" version="8.4.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialDesignColors" version="5.3.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.Data.Sqlite.Core" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="3.1.6" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.32" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.32" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="3.1.32" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Sqlite.Core" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.32" targetFramework="net472" />
@@ -26,19 +25,20 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.77" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.1.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.1.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.1.2" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
